--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -18,14 +18,16 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /home/robert/nltk_data...\n",
+      "[nltk_data]     /home/mostafawael/nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/robert/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/mostafawael/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /home/robert/nltk_data...\n",
+      "[nltk_data]     /home/mostafawael/nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/robert/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/mostafawael/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -231,7 +233,7 @@
      "output_type": "stream",
      "text": [
       "2000\n",
-      "14272\n"
+      "18272\n"
      ]
     }
    ],
@@ -278,8 +280,8 @@
       "Class=1, n=5943 (33.333%)\n",
       "Class=0, n=5943 (33.333%)\n",
       "Some notes about dimensions of the data\n",
-      "X_train size before cleaning = (7462, 14272)\n",
-      "X_train size = (17829, 14272)\n",
+      "X_train size before cleaning = (7462, 18272)\n",
+      "X_train size = (17829, 18272)\n",
       "y_train size = (17829,)\n"
      ]
     }
@@ -310,7 +312,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_test size = (2000, 14272)\n",
+      "X_test size = (2000, 18272)\n",
       "y_test size = (2000,)\n",
       "Unique values in the dataset = [-1  0  1]\n",
       "Unique values in the dataset = [-1  0  1]\n"
@@ -354,9 +356,9 @@
      "output_type": "stream",
      "text": [
       "2000\n",
-      "14272\n",
+      "18272\n",
       "7462\n",
-      "14272\n"
+      "18272\n"
      ]
     }
    ],
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -378,39 +380,73 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.57      0.27      0.37       619\n",
-      "           0       0.26      0.19      0.22       697\n",
-      "           1       0.43      0.74      0.54       684\n",
+      "          -1       0.56      0.28      0.37       619\n",
+      "           0       0.25      0.19      0.22       697\n",
+      "           1       0.43      0.74      0.55       684\n",
       "\n",
-      "    accuracy                           0.40      2000\n",
+      "    accuracy                           0.41      2000\n",
       "   macro avg       0.42      0.40      0.38      2000\n",
-      "weighted avg       0.41      0.40      0.38      2000\n",
+      "weighted avg       0.41      0.41      0.38      2000\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.4035"
+       "0.4055"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# RandomForestClassifier\n",
-    "clf = RandomForestClassifier(n_estimators=500, max_depth=15, random_state=0)\n",
+    "clf = RandomForestClassifier(n_estimators=500, max_depth=15, random_state=1, n_jobs=6)\n",
     "model, report = modelPipeline(X_train, y_train, X_test, y_test, clf, MODELS_PATH+ 'clf.model')\n",
     "report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.79      0.12      0.22       619\n",
+      "           1       0.23      0.10      0.14       697\n",
+      "           2       0.39      0.92      0.55       684\n",
+      "\n",
+      "    accuracy                           0.39      2000\n",
+      "   macro avg       0.47      0.38      0.30      2000\n",
+      "weighted avg       0.46      0.39      0.30      2000\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.388"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Xgboost\n",
     "xgb = XGBClassifier()\n",
@@ -431,23 +467,23 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.08      0.68      0.15        68\n",
-      "           0       0.31      0.45      0.37       121\n",
-      "           1       0.95      0.30      0.46       790\n",
+      "          -1       0.31      0.71      0.43       619\n",
+      "           0       0.19      0.09      0.12       697\n",
+      "           1       0.36      0.12      0.19       684\n",
       "\n",
-      "    accuracy                           0.35       979\n",
-      "   macro avg       0.45      0.48      0.33       979\n",
-      "weighted avg       0.81      0.35      0.43       979\n",
+      "    accuracy                           0.29      2000\n",
+      "   macro avg       0.29      0.31      0.25      2000\n",
+      "weighted avg       0.29      0.29      0.24      2000\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.34831460674157305"
+       "0.2935"
       ]
      },
-     "execution_count": 489,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,34 +499,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "          -1       0.12      0.54      0.20        68\n",
-      "           0       0.31      0.51      0.39       121\n",
-      "           1       0.95      0.57      0.71       790\n",
-      "\n",
-      "    accuracy                           0.56       979\n",
-      "   macro avg       0.46      0.54      0.43       979\n",
-      "weighted avg       0.81      0.56      0.64       979\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.5617977528089888"
-      ]
-     },
-     "execution_count": 490,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SVM\n",
     "svm = svm.SVC()\n",
@@ -799,7 +808,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -813,12 +822,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e0d277ff71215bc2e00e65dbe1083bb095effc9738a74808cbcc90b6ef0d8026"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
