--- a/test.ipynb
+++ b/test.ipynb
@@ -18,9 +18,10 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /home/robert/nltk_data...\n",
+      "[nltk_data]     /home/mostafawael/nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/robert/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/mostafawael/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# clean the data\n",
-    "test_data = cleanData(test_df, 'test' , clean=False, clearData=False)\n",
+    "test_data = cleanData(test_df, 'test' , clean=True, clearData=False)\n",
     "\n",
     "# lemmatize the data\n",
     "st = ISRIStemmer()\n",
@@ -67,18 +68,18 @@
     "\n",
     "# get the word embeddings for each tweet\n",
     "x_test = get_features(w2v_model, bow_model, tfidf_model, lemma, 1, 1, 1) # get the word embeddings for each tweet\n",
-    "x_test= np.array([np.array(xi) for xi in x_test.to_numpy()])\n",
+    "x_test= np.array([np.array(xi) for xi in x_test])\n",
     "\n",
     "\n",
     "# load the models\n",
     "stance_model = loadModel('out/models/stance/clf.model')\n",
-    "category_model = loadModel('out/models/clf.model')\n",
+    "# category_model = loadModel('out/models/clf.model')\n",
     "\n",
     "# get the predictions\n",
     "stances = stance_model.predict(x_test)\n",
-    "categories = category_model.predict(x_test)\n",
+    "# categories = category_model.predict(x_test)\n",
     "\n",
-    "out_df = pd.DataFrame({'id': test_df.id, 'category': categories, 'stance': stances})\n",
+    "out_df = pd.DataFrame({'id': test_df.id, 'category': stances, 'stance': stances})\n",
     "\n",
     "# save the predictions in csv file\n",
     "out_df.to_csv('out/submission/predictions.csv', index=False)\n"
@@ -90,11 +91,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -108,12 +116,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:26:10) \n[GCC 11.2.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bdae8ebc0151ec65c4f1198b193fec26fb9b849a179ab75edca17b99fd707516"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
